-Added a List of obstacles for future implementation inside RoomImpl;
-Added a List of Doors to implement dinamically based on number of rooms connected to the current one;

10/04/2020
-Implemented class Menu to act as a game menu once you start up the game, now mainly contains two buttons, one to start the game and one to close the application;
-Implemented levelID inside TestPlay to dinamically load level based on ID and algorithm given;
-Eliminated a copy of both GameSettings and Pair since they already exits, and updated dependecies;
-Added function to List of obstacles to be treated same with items;

11/04/2020 - 1
-Fixed some minor issues regarding the drawing of items (Keys more specifically);
-Implemented system to store all rooms that are created using the function generateLevel inside LeveelDesignGeneratorImpl;
-Implemented temporary system to switch between generated rooms to see if changes are applied;

11/04/2020 - 2
-Reimplemented the way the user can change rooms, because algorithm that generates rooms has changed;

14/04/2020
-Integrated and Implemented function inside RenderingImpl to draw obstacles temporarly for testing, more permanent solution will be implemented
once testing for entities has been done extensively;

15/04/2020
-Implemented maximum FPS recheable so performance should be the same regardless of system hardware;
-Implemented Player inside TestPlay, Logic and Rendering to perform test regarding the interaction of the mainChar with the world;
-Implemented inside Player a way to stop main character when walking in obstacles;
-Doors are now usable to traverse rooms;

19/04/2020
-Changed implementation of Items and Modifiers to use pickupables instead of entities;

20/04/2020
-Implemented temporary inventory and stats GUI to check if player and the world are behaving properly;
-Implemented transitioning to the next level via use of stairs;
-Made minor fixed inside other classes (like implementing a get for Inventory inside PlayerImpl);